spacing fix

--- a/assets/sass/global.scss
+++ b/assets/sass/global.scss
@@ -187,7 +187,7 @@ ul {
 
 .main-content {
     background: #fff;
-    padding: 3%;
+    padding: 1.6em 5%;
     border: 1px solid $colour_borders;
 }
 
